--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <title>Pavlo Pomirko</title>
     </head>
     <body>
+        <div id="nothing">
         <nav>
-                <ul class="navbar">
+                <ul class="navbar" >
                       <li>
                          <a href="index.html">Home</a>
                       </li>
@@ -22,6 +23,7 @@
                           <a href="#phone">Contact</a>
                       </li>
                    </ul>
+        </div>
         </nav>
             <div class="handle">Just click me</div>
         <div class="container">
@@ -36,7 +38,7 @@
                       Portfolio
                   </div>
                     <div class="boxes">
-                    <div class="image house">
+                    <div class="image house" id="#image house">
                        <img src="http://blackrockdigital.github.io/startbootstrap-freelancer/img/portfolio/cabin.png" alt="house">
                     </div>
                     <div class="image cake">
